[project]
name = "alyx-data"
version = "0.1.0"
description = "Reproducible data pipeline that pulls 90 days of copilot-prod (Alyx) spans from Arize and produces three layered artifacts: raw spans, user queries with scope flags, and full session/trace trajectories."
requires-python = ">=3.11,<3.13"
dependencies = [
    # Arize trace export
    "arize>=7.19",
    "pandas>=2.2",
    "pyarrow>=15",
    # env / config
    "python-dotenv>=1.0",
    # misc
    "tqdm>=4.66",
    "tenacity>=8.2",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # DuckDB lets us query the parquet layers with SQL without loading them
    # fully into pandas. Used by the Stage 2 notebook for the heavier
    # session/trajectory aggregations.
    "duckdb>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline", "src/analysis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
# Parent Phoenix pyproject.toml loads mypy plugins (strawberry) we don't need here.
plugins = []

[[tool.mypy.overrides]]
module = [
    "arize.*",
    "pyarrow",
    "pyarrow.*",
    "duckdb",
    "duckdb.*",
    "matplotlib",
    "matplotlib.*",
    "seaborn",
    "seaborn.*",
]
ignore_missing_imports = true


[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pandas-stubs>=3.0.0.260204",
    "types-tqdm>=4.67.3.20260408",
]
